added inputs and outputs

--- a/projects/my-spotify/src/app/components/reusable/search-results/search-results.component.html
+++ b/projects/my-spotify/src/app/components/reusable/search-results/search-results.component.html
@@ -1,8 +1,7 @@
 songs result:
-<ul>
-	<li *ngFor="let song of songs">
-		{{song.artist}}
-		<br>
-		{{song.songName}}
-	</li>
-</ul>
+<spot-song-item
+		[song]="song"
+		*ngFor="let song of songs"
+></spot-song-item>
+
+
