--- a/projects/my-spotify/src/assets/style.css
+++ b/projects/my-spotify/src/assets/style.css
@@ -6,6 +6,7 @@ body, html, spot-layout {
 	flex-direction: column;
 	align-items: baseline;
 	width: 100%;
+	flex: 1;
 }
 
 spot-header, spot-footer {
@@ -26,6 +27,8 @@ spot-header, spot-footer {
     justify-content: center;
     align-items: center;
     display: flex;
+    overflow: auto;
+    padding-top: 1150px;
 }
 
 .search-bar-wrapper {
@@ -60,6 +63,7 @@ spot-content {
     display: flex;
     /* border: 2px solid red; */
     width: 100%;
+    overflow: hidden;
 }
 
 spot-side-bar {
@@ -81,4 +85,5 @@ p{
 	display: flex;
 	flex:1;
 	width: 100%;
+	overflow: hidden;
 }
